ci/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rolphopen-app
  labels:
    app: rolphopen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rolphopen
  template:
    metadata:
      labels:
        app: rolphopen
    spec:
      volumes:
        - name: static
          emptyDir: { }
      containers:
        - name: app-nginx
          image: gitea.delin.tech/delin/rolphopen-nginx:1.0.1
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              name: gunicorn
          volumeMounts:
          - name: static
            mountPath: /usr/share/nginx/static
        - image: gitea.delin.tech/delin/rolphopen:1.0.11
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          name: rolphopen
