ci/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rolphopen
  labels:
    app: rolphopen
spec:
  type: NodePort
  selector:
    app: rolphopen
  ports:
    - port: 8080
      targetPort: 8080
